--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
     "bootstrap": "^5.2.2",
+    "ng-image-fullscreen-view": "^3.0.3",
     "ng-lazyload-image": "9.1.0",
+    "ngx-whatsapp-button": "^1.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
