--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.9",
+    "@angular/cdk": "^9.2.3",
     "@angular/common": "~11.2.9",
     "@angular/compiler": "~11.2.9",
     "@angular/core": "~11.2.9",
@@ -19,9 +20,14 @@
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "bootstrap": "^5.2.2",
     "ng-image-fullscreen-view": "^3.0.3",
     "ng-lazyload-image": "9.1.0",
+    "ngx-sharebuttons": "8.0.1",
     "ngx-whatsapp-button": "^1.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
